# cognizantaimlpr2026

./: README.md
day2/day2env/: pyvenv.cfg
day2/docs/source/: conf.py  index.rst  start.rst
day2/ecommerce.egg-info/: PKG-INFO
day2/src/: app.py  start.py
day2/src/model/: customer.py
day2/src/store/: customerstore.py
day2/src/view/: customerview.py
day3/: healthcaretestreport.html  pyproject.toml  report.html
day3/configuration/: logger_configuration.py
day3/ecommerce.egg-info/: requires.txt
day3/src/Healthcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day3/src/exceptions/: appointment_not_found.py  doctor_not_found_exception.py
day3/src/models/: appointment.py  doctor.py  patient.py  person.py
day3/src/stores/: appointment_store.py  doctor_store.py  patient_store.py
day3/src/util/: app.py  main.py
day3/tests/: doctor.csv  patient.csv
day3/tests/contract_testing/: test_doctor.py  test_doctor_store.py  test_patient.py
